tests/golden/compile-fail/name_duplicate_struct_field.rua
struct Point {
    x: i64,
    x: i64,
}
